--- a/about.html
+++ b/about.html
@@ -41,66 +41,66 @@
             <ul class="sub">
                 <li>
                     <ul class="sub_detail">
-                        <li><a href="#">트립트랩</a></li>
-                        <li><a href="#">노미</a></li>
-                        <li><a href="#">스텝스</a></li>
-                        <li><a href="#">클릭</a></li>
+                        <li><a href="./product.html">트립트랩</a></li>
+                        <li><a href="./product.html">노미</a></li>
+                        <li><a href="./product.html">스텝스</a></li>
+                        <li><a href="./product.html">클릭</a></li>
                     </ul>
                 </li>
                 <li>
                     <ul class="sub_detail">
-                        <li><a href="#">요요 0+</a></li>
-                        <li><a href="#">요요 6+</a></li>
-                        <li><a href="#">요요 봉쁘앙</a></li>
-                        <li><a href="#">익스플로리 엑스</a></li>
-                        <li><a href="#">익스플로리 엑스 캐리콧</a></li>
+                        <li><a href="./product.html">요요 0+</a></li>
+                        <li><a href="./product.html">요요 6+</a></li>
+                        <li><a href="./product.html">요요 봉쁘앙</a></li>
+                        <li><a href="./product.html">익스플로리 엑스</a></li>
+                        <li><a href="./product.html">익스플로리 엑스 캐리콧</a></li>
                     </ul>
                 </li>
                 <li>
                     <ul class="sub_detail">
-                        <li><a href="#">침대</a></li>
-                        <li><a href="#">스누지 배시넷</a></li>
-                        <li><a href="#">슬리피 침대</a></li>
-                        <li><a href="#">클라우드 슬리퍼</a></li>
-                        <li><a href="#">체인저</a></li>
-                        <li><a href="#">드레서 / 체인저</a></li>
+                        <li><a href="./product.html">침대</a></li>
+                        <li><a href="./product.html">스누지 배시넷</a></li>
+                        <li><a href="./product.html">슬리피 침대</a></li>
+                        <li><a href="./product.html">클라우드 슬리퍼</a></li>
+                        <li><a href="./product.html">체인저</a></li>
+                        <li><a href="./product.html">드레서 / 체인저</a></li>
                     </ul>
                 </li>
                 <li>
                     <ul class="sub_detail">
-                        <li><a href="#">플렉시바스 (64cm)</a></li>
-                        <li><a href="#">플렉시바스 라지 (80cm)</a></li>
-                        <li><a href="#">플렉시바스 스탠드</a></li>
+                        <li><a href="./product.html">플렉시바스 (64cm)</a></li>
+                        <li><a href="./product.html">플렉시바스 라지 (80cm)</a></li>
+                        <li><a href="./product.html">플렉시바스 스탠드</a></li>
                     </ul>
                 </li>
                 <li>
                     <ul class="sub_detail">
-                        <li><a href="#">리마스 (3.2~15kg)</a></li>
-                        <li><a href="#">리마스 플렉스 (4~20kg)</a></li>
-                        <li><a href="#">리마스 매쉬 (4~15kg)</a></li>
+                        <li><a href="./product.html">리마스 (3.2~15kg)</a></li>
+                        <li><a href="./product.html">리마스 플렉스 (4~20kg)</a></li>
+                        <li><a href="./product.html">리마스 매쉬 (4~15kg)</a></li>
                     </ul>
                 </li>
                 <li>
                     <ul class="sub_detail">
-                        <li><a href="#">놀이테이블</a></li>
-                        <li><a href="#">의자</a></li>
-                        <li><a href="#">게임 / 장난감</a></li>
-                        <li><a href="#">수납 / 커버</a></li>
+                        <li><a href="./product.html">놀이테이블</a></li>
+                        <li><a href="./product.html">의자</a></li>
+                        <li><a href="./product.html">게임 / 장난감</a></li>
+                        <li><a href="./product.html">수납 / 커버</a></li>
                     </ul>
                 </li>
                 <li>
                     <ul class="sub_detail">
-                        <li><a href="#">하이체어</a></li>
-                        <li><a href="#">유모차 / 카시트</a></li>
-                        <li><a href="#">아이방</a></li>
-                        <li><a href="#">뮤테이블</a></li>
-                        <li><a href="#">욕조</a></li>
-                        <li><a href="#">슬리피</a></li>
+                        <li><a href="./product.html">하이체어</a></li>
+                        <li><a href="./product.html">유모차 / 카시트</a></li>
+                        <li><a href="./product.html">아이방</a></li>
+                        <li><a href="./product.html">뮤테이블</a></li>
+                        <li><a href="./product.html">욕조</a></li>
+                        <li><a href="./product.html">슬리피</a></li>
                     </ul>
                 </li>
                 <li>
                     <ul class="sub_detail">
-                        <li><a href="#">젯키즈 배드박스 캐리어</a></li>
+                        <li><a href="./product.html">젯키즈 배드박스 캐리어</a></li>
                     </ul>
                 </li>
             </ul>
@@ -108,7 +108,7 @@
     </header>
     <main>
         <div class="part part1">
-            <video src="./video/part1.mp4" autoplay muted loop></video>
+            <video src="./video/about.mp4" autoplay muted loop></video>
             <div class="main_title">
                 <h2>WHO ARE WE</h2>
                 <p>아이들을 돌보는 일은 안전, 편안함 및 보호를 제공하는 것 이상을 의미합니다.<br>우리 아이들이 물려 받을 지구를 돌보는 것과 같습니다. 스토케는 이 돌봄을 행동으로 바꿉니다.</p>
