--- a/product.html
+++ b/product.html
@@ -26,78 +26,78 @@
         </div>
         <div class="menu">
             <ul class="gnb">
-                <li><a href="#">하이체어</a></li>
-                <li><a href="#">유모차 / 카시트</a></li>
-                <li><a href="#">침대 / 체인저</a></li>
-                <li><a href="#">욕조</a></li>
-                <li><a href="#">아기띠</a></li>
-                <li><a href="#">뮤테이블 시리즈</a></li>
-                <li><a href="#">액세서리</a></li>
-                <li><a href="#">여행용 제품</a></li>
+                <li><a href="./product.html">하이체어</a></li>
+                <li><a href="./product.html">유모차 / 카시트</a></li>
+                <li><a href="./product.html">침대 / 체인저</a></li>
+                <li><a href="./product.html">욕조</a></li>
+                <li><a href="./product.html">아기띠</a></li>
+                <li><a href="./product.html">뮤테이블 시리즈</a></li>
+                <li><a href="./product.html">액세서리</a></li>
+                <li><a href="./product.html">여행용 제품</a></li>
             </ul>
             <ul class="sub">
                 <li>
                     <ul class="sub_detail">
-                        <li><a href="#">트립트랩</a></li>
-                        <li><a href="#">노미</a></li>
-                        <li><a href="#">스텝스</a></li>
-                        <li><a href="#">클릭</a></li>
+                        <li><a href="./product.html">트립트랩</a></li>
+                        <li><a href="./product.html">노미</a></li>
+                        <li><a href="./product.html">스텝스</a></li>
+                        <li><a href="./product.html">클릭</a></li>
                     </ul>
                 </li>
                 <li>
                     <ul class="sub_detail">
-                        <li><a href="#">요요 0+</a></li>
-                        <li><a href="#">요요 6+</a></li>
-                        <li><a href="#">요요 봉쁘앙</a></li>
-                        <li><a href="#">익스플로리 엑스</a></li>
-                        <li><a href="#">익스플로리 엑스 캐리콧</a></li>
+                        <li><a href="./product.html">요요 0+</a></li>
+                        <li><a href="./product.html">요요 6+</a></li>
+                        <li><a href="./product.html">요요 봉쁘앙</a></li>
+                        <li><a href="./product.html">익스플로리 엑스</a></li>
+                        <li><a href="./product.html">익스플로리 엑스 캐리콧</a></li>
                     </ul>
                 </li>
                 <li>
                     <ul class="sub_detail">
-                        <li><a href="#">침대</a></li>
-                        <li><a href="#">스누지 배시넷</a></li>
-                        <li><a href="#">슬리피 침대</a></li>
-                        <li><a href="#">클라우드 슬리퍼</a></li>
-                        <li><a href="#">체인저</a></li>
-                        <li><a href="#">드레서 / 체인저</a></li>
+                        <li><a href="./product.html">침대</a></li>
+                        <li><a href="./product.html">스누지 배시넷</a></li>
+                        <li><a href="./product.html">슬리피 침대</a></li>
+                        <li><a href="./product.html">클라우드 슬리퍼</a></li>
+                        <li><a href="./product.html">체인저</a></li>
+                        <li><a href="./product.html">드레서 / 체인저</a></li>
                     </ul>
                 </li>
                 <li>
                     <ul class="sub_detail">
-                        <li><a href="#">플렉시바스 (64cm)</a></li>
-                        <li><a href="#">플렉시바스 라지 (80cm)</a></li>
-                        <li><a href="#">플렉시바스 스탠드</a></li>
+                        <li><a href="./product.html">플렉시바스 (64cm)</a></li>
+                        <li><a href="./product.html">플렉시바스 라지 (80cm)</a></li>
+                        <li><a href="./product.html">플렉시바스 스탠드</a></li>
                     </ul>
                 </li>
                 <li>
                     <ul class="sub_detail">
-                        <li><a href="#">리마스 (3.2~15kg)</a></li>
-                        <li><a href="#">리마스 플렉스 (4~20kg)</a></li>
-                        <li><a href="#">리마스 매쉬 (4~15kg)</a></li>
+                        <li><a href="./product.html">리마스 (3.2~15kg)</a></li>
+                        <li><a href="./product.html">리마스 플렉스 (4~20kg)</a></li>
+                        <li><a href="./product.html">리마스 매쉬 (4~15kg)</a></li>
                     </ul>
                 </li>
                 <li>
                     <ul class="sub_detail">
-                        <li><a href="#">놀이테이블</a></li>
-                        <li><a href="#">의자</a></li>
-                        <li><a href="#">게임 / 장난감</a></li>
-                        <li><a href="#">수납 / 커버</a></li>
+                        <li><a href="./product.html">놀이테이블</a></li>
+                        <li><a href="./product.html">의자</a></li>
+                        <li><a href="./product.html">게임 / 장난감</a></li>
+                        <li><a href="./product.html">수납 / 커버</a></li>
                     </ul>
                 </li>
                 <li>
                     <ul class="sub_detail">
-                        <li><a href="#">하이체어</a></li>
-                        <li><a href="#">유모차 / 카시트</a></li>
-                        <li><a href="#">아이방</a></li>
-                        <li><a href="#">뮤테이블</a></li>
-                        <li><a href="#">욕조</a></li>
-                        <li><a href="#">슬리피</a></li>
+                        <li><a href="./product.html">하이체어</a></li>
+                        <li><a href="./product.html">유모차 / 카시트</a></li>
+                        <li><a href="./product.html">아이방</a></li>
+                        <li><a href="./product.html">뮤테이블</a></li>
+                        <li><a href="./product.html">욕조</a></li>
+                        <li><a href="./product.html">슬리피</a></li>
                     </ul>
                 </li>
                 <li>
                     <ul class="sub_detail">
-                        <li><a href="#">젯키즈 배드박스 캐리어</a></li>
+                        <li><a href="./product.html">젯키즈 배드박스 캐리어</a></li>
                     </ul>
                 </li>
             </ul>
@@ -117,43 +117,43 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./product.html">
                         <img src="./images/category_002.jpg" alt="">
                         <span>유모차 / 카시트</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./product.html">
                         <img src="./images/category_003.jpg" alt="">
                         <span>침대 / 체인저</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./product.html">
                         <img src="./images/category_004.jpg" alt="">
                         <span>욕조</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./product.html">
                         <img src="./images/category_005.jpg" alt="">
                         <span>아기띠</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./product.html">
                         <img src="./images/category_006.jpg" alt="">
                         <span>뮤테이블 시리즈</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./product.html">
                         <img src="./images/category_007.jpg" alt="">
                         <span>액세서리</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./product.html">
                         <img src="./images/category_008.jpg" alt="">
                         <span>여행용 제품</span>
                     </a>
