--- a/index.html
+++ b/index.html
@@ -1296,7 +1296,7 @@
             slidesPerView:3,
             on: {
                 slideChange: function () {
-                    console.log('part5_slide.realIndex', part5_slide.realIndex)
+                    /* console.log('part5_slide.realIndex', part5_slide.realIndex) */
                     if (part5_slide.realIndex !== this.realIndex) {
                         part5_slide.slideToLoop(this.realIndex);
                     }
@@ -1316,7 +1316,7 @@
             },
             on: {
             slideChange: function () {
-                console.log(part5_pdt_slide.realIndex)
+                /* console.log(part5_pdt_slide.realIndex) */
                 
                 if (part5_pdt_slide.realIndex !== this.realIndex) {
                     part5_pdt_slide.slideTo(this.realIndex);
