--- a/about.html
+++ b/about.html
@@ -324,6 +324,8 @@
             freeMode: true,
             speed:7000,
         });
+        const vid = document.querySelector('.part1 video')
+        vid.playbackRate = 0.6;
     </script>
 </body>
 </html>
