--- a/about.html
+++ b/about.html
@@ -324,8 +324,7 @@
             freeMode: true,
             speed:7000,
         });
-        const vid = document.querySelector('.part1 video')
-        vid.playbackRate = 0.6;
+        document.getElementsByTagName('video')[0].playbackRate=0.6
     </script>
 </body>
 </html>
